--- a/WebContent/resources/css/sistema.css
+++ b/WebContent/resources/css/sistema.css
@@ -10,13 +10,14 @@ body {
 header {
 	padding: 5px 0px;
 	margin-bottom: 20px;
-	height: 30px;
-	background-color: #545454;
+	height: 60px;
+	background-image: url("../resources/css/cabecalho6.gif");
+	background-size: auto 70px;
 	color: #fff;
 	box-shadow: 0px 2px 2px #ccc;
 }
 
-header>div {
+header > div {
 	margin-left: 8px
 }
 
@@ -81,62 +82,66 @@ h1 {
 
 /* Customiza TabView - início */
 .ui-tabs .ui-tabs-panel {
-	padding: 0.5em 0.2em !important;
+    padding: 0.5em 0.2em !important;
 }
 
 .ui-tabs {
-	padding: 0px !important;
+    padding: 0px !important;
 }
 
 .ui-tabs .ui-tabs-nav {
-	margin: -1px !important;
+    margin: -1px !important;
 }
 
-.ui-tabs.ui-tabs-top>.ui-tabs-nav {
-	padding: 0px !important;
+.ui-tabs.ui-tabs-top > .ui-tabs-nav {
+    padding: 0px !important;
 }
 /* Customiza TabView - fim */
 
 /* Menu sistema inicio */
 .menu-sistema {
-	border: 0px !important;
-	padding: 0px !important;
-	background: none !important;
+    border: 0px !important;
+    padding: 0px !important;
+    background: none !important;
 }
 
-.menu-sistema .ui-menu-parent>a .ui-menuitem-text, .menu-sistema>.ui-menu-list>.ui-menuitem>a>.ui-menuitem-text
-	{
-	color: #ffffff !important;
+.menu-sistema .ui-menu-parent > a .ui-menuitem-text, .menu-sistema > .ui-menu-list > .ui-menuitem > a > .ui-menuitem-text {
+    color: #ffffff !important;
 }
 
 .menu-sistema .ui-icon-triangle-1-s {
-	background: url(#{ resource [ 'images:seta-para-baixo.png' ]
+    background: url(#{resource['images:seta-para-baixo.png']}) no-repeat;
 }
 
-)
-no-repeat
-;
-
-
+.rodape{
+	font-family: Arial,Helvetica,sans-serif;
+	text-align: center;
+	font-size: 12px;
+	font-weight: normal;
+	background-color: #A7C4D2;
+	height: 100px;
 }
 
-/*Configurações para cabeçalho e rodapé*/
-
-.ui-layout-north {
-	z-index: 20 !important;
-	overflow: visible !important;
+#home_apresetacao {
+  right: 0px;
+  margin: 0px auto;
+  max-width: 300px;
+  position: relative;
 }
 
-.ui-layout-north .ui-layout-unit-content {
-	overflow: visible !important;
+.apresentacao_imagem {
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  text-shadow: 0 1px 0 #fff;
+  min-width: 280px;
 }
 
-.ui-layout-south {
-	z-index: 20 !important;
-	overflow: visible !important;
-}
-
-.ui-layout-south .ui-layout-unit-content {
-	overflow: visible !important;
+.text_apresentacao{
+	font-family: Arial,Helvetica,sans-serif;
+	text-align: center;
+	font-size: 25px;
+	font-weight: bold;
+	color: #A7C4D2;
 }
 /* Menu sistema fim */
