--- a/WebContent/templates/home.xhtml
+++ b/WebContent/templates/home.xhtml
@@ -5,10 +5,19 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
 
-	<ui:define name="titulo">Dashboard</ui:define>
+	<ui:define name="titulo">::SI Agrega ::</ui:define>
 
 	<ui:define name="corpo">
-		<br/><br/><br/>Seja bem-vindo!<br/><br/><br/>
+		<div id="home_apresetacao">
+		<div class="text_apresentacao"> SISTEMA DE GESTÃO</div>
+				<div>
+					<div class="apresentacao_imagem">
+						
+							<h:graphicImage library="images" height="300" width="300" 
+								name="logoAgrega.jpg" />
+						
+					</div>
+				</div>
+		</div>
 	</ui:define>
-
 </ui:composition>
