--- a/WebContent/templates/home.xhtml
+++ b/WebContent/templates/home.xhtml
@@ -5,10 +5,12 @@
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
 
-	<ui:define name="titulo">Dashboard</ui:define>
+	<ui:define name="titulo">: :Agrega - SIG: : </ui:define>
 
 	<ui:define name="corpo">
-		<br/><br/><br/>Seja bem-vindo!<br/><br/><br/>
+	<div style="float: left; margin-left:75px;  margin-top:150px;">
+					<h:graphicImage library="images" name="logo_corpo.png" />
+	</div>
 	</ui:define>
 
 </ui:composition>
