--- a/WebContent/templates/master.xhtml
+++ b/WebContent/templates/master.xhtml
@@ -14,6 +14,7 @@
 </h:head>
 
 <h:body>
+
 	<p:layout fullPage="true">
 		<o:form id="formPrincipal" style="display: inline-block">
 
@@ -36,9 +37,9 @@
 
 						<p:submenu label="Cadastros">
 							<p:menuitem id="cadProfissional" value="Profissionais"
-								icon="ui-icon-plus" action="#{menuBean.novoProfissional()}" />
+								icon="ui-icon-plus" action="#{menuBean.novoProfissional()}" actionListener="#{menuBean.reset()}" process="@this"/>
 							<p:menuitem id="cadCliente" value="Clientes"
-								action="#{menuBean.novoCliente()}" icon="ui-icon-plus" />
+								action="#{menuBean.novoCliente()}" icon="ui-icon-plus" actionListener="#{menuBean.reset()}" process="@this"/>
 							<p:menuitem value="Usuários" icon="ui-icon-plus" />
 							<p:menuitem value="Fornecedores" icon="ui-icon-plus" />
 						</p:submenu>
@@ -46,12 +47,14 @@
 						<p:submenu label="Consultas">
 							<p:menuitem id="consultaProfissional" value="Profissionais"
 								icon="ui-icon-search"
-								action="#{menuBean.consultarProfissioanl()}">
+								action="#{menuBean.consultarProfissioanl()}"
+								actionListener="#{menuBean.reset()}"
+								process="@this">
 								<o:ignoreValidationFailed />
 							</p:menuitem>
 
 							<p:menuitem value="Clientes" id="consultaCliente"
-								icon="ui-icon-search" action="#{menuBean.consultarCliente()}" />
+								icon="ui-icon-search" action="#{menuBean.consultarCliente()}" actionListener="#{menuBean.reset()}" process="@this"/>
 						</p:submenu>
 
 						<p:menuitem value="Sair" />
